--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "server.js",
 	"scripts": {
 		"dev:server": "nodemon server.js",
-		"json:server": "json-server --watch data.json",
+		"json:server": "json-server --watch data.json --port 8888",
 		"start": "concurrently \"npm run json:server\" \"npm run dev:server && open http://localhost:4000/graphql\""
 	},
 	"author": "",
